--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "fs-write-file", "dialog-save", "path-all", "http-all", "shell-open"] }
+tauri = { version = "1.4", features = [ "window-set-decorations", "fs-read-dir", "window-set-size", "notification-all", "window-unmaximize", "os-all", "fs-create-dir", "window-start-dragging", "window-unminimize", "process-relaunch", "window-minimize", "window-maximize", "window-set-fullscreen", "dialog-message", "window-set-focus", "window-close", "fs-write-file", "dialog-save", "path-all", "http-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 image = "0.24.7"
